--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nils Stelling - Über mich</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
@@ -16,10 +17,10 @@
      <hr>   
         <h2>Zertifizierungen</h2>
             <h3>Microsoft</h3>
-                <ul>
-                    <li>Microsoft Certified: Azure Administrator Associate</li>
-                    <li>Microsoft Certified: Azure Solutions Architect Expert</li>    
-                </ul>
+                <p>Microsoft Certified: Azure Administrator Associate <br>
+                    Microsoft Certified: Azure Solutions Architect Expert</p>
+ 
+                
             <h3>VMware</h3>  
                 <ul>
                     <li>VMware Certified Trainer (VCI)</li>
@@ -60,7 +61,7 @@
     <hr>
     </body>
     <footer>
-        <a href="./public/contact.html">Kontak</a>
+        <a href="./public/contact.html">Kontakt</a>
         <p>© Nils Stelling. All rights reserved. </p>
     </footer>
 </html>
